istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devops-final-docker-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-final-docker
spec:
  hosts:
  - "*"
  gateways:
  - devops-final-docker-gateway
  http:
  - match:
    - uri:
        exact: / 
    - uri:
        exact: /user/search
    - uri:
        exact: /user/add
    - uri:
        prefix: /user/delete
    - uri:
        prefix: /user/update
    route:
    - destination:
        host: /
        port:
          number: 3000
